--- a/Salvamento/index.css
+++ b/Salvamento/index.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -7,9 +7,10 @@
     font-family: 'Segoe UI';
 }
 
-.banner{
+.banner {
     width: 100%;
     height: 100vh;
+    position: relative;
 }
 
 .overlay {
@@ -21,34 +22,39 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75));
 }
 
-.navbar{
+.navbar {
     height: 90px;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 0 50px;
 }
 
 .enlace {
-    position: absolute;
-    padding: 20px 50px;
+    display: flex;
+    align-items: center;
 }
 
-.logo{
+.logo {
     height: 80px;
 }
 
-.navbar .menu {
-    float: right;
-    margin-right: 20px;
-    margin-top: 20px;
+.menu {
+    display: flex;
+    align-items: center;
 }
 
-.navbar .menu li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+.menu li {
     position: relative; 
+    margin-left: 20px;
 }
 
-.navbar .menu li a {
+.menu li a {
     color: #fff;
     font-weight: bold;
     font-size: 15px;
@@ -56,7 +62,7 @@
     border-radius: 3px;
     text-transform: uppercase;
     display: block; 
-    
+    font-weight: 800;
 }
 
 .menu li a:hover {
@@ -66,10 +72,10 @@
 .menu ul {
     display: none;
     position: absolute;
-    list-style: none;
     background-color: rgb(0, 0, 0); 
-    width: 240px;
-    border-radius: 20px;
+    top: 100%;
+    left: 0;
+    border-radius: 10px;
     z-index: 1;
 }
 
@@ -78,29 +84,28 @@
 }
 
 .menu ul li {
-    display: block;
+    width: 200px;
     margin: 0;
-    height: 75px;
 }
 
 .menu ul a {
     padding: 10px;
+    display: block;
+    color: white;
+}
+.menu ul ul {
+    display: none;
 }
 
-.menu li ul li{
-    width: 100%;
+.menu ul ul.show {
+    display: block;
 }
 
 .checkbtn {
-    position: absolute;
-    right: 0;
     font-size: 30px;
     color: #fff;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
     display: none;
+    cursor: pointer;
 }
 
 #check {
@@ -108,22 +113,24 @@
 }
 
 .medio {
-    width: 100%;
     position: absolute;
-    transform: translateY(-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     color: white;
-    top: 50%;
 }
 
 .titulo h2 {
     font-size: 40px;
     margin-bottom: 10px;
     font-weight: bold;
+    font-weight: 800;
 }
 
 .titulo h5 {
     font-size: 20px;
+    font-weight: 400;
 }
 
 .botones {
@@ -131,20 +138,22 @@
 }
 
 .botones a {
-    border: 1px blue solid;
+    border: 2px solid blue;
     border-radius: 50px;
-    padding: 10px;
+    padding: 10px 20px;
     margin: 5px;
     color: white;
-    text-decoration: none;
+    background-color: blue;
     font-weight: bold;
+    text-decoration: none;
 }
 
 .botones a:hover {
-    background-color: blue;
+    background-color: white;
+    color: blue;
 }
 
-.banner video{
+.banner video {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -154,78 +163,104 @@
     z-index: -1;
 }
 
-.slider-wrapper {
-	position: relative;
-    width: 100%;
+.social-icons {
+    display: flex;
+    align-items: center;
 }
 
+.social-icons a {
+    color: white;
+    margin-left: 10px;
+    font-size: 20px;
+}
+
+
+.slider-container {
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+    height: 100vh; /* Full viewport height */
+}
 
 .slider {
-	display: flex;
-	aspect-ratio: 16 / 9;
-	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-	border-radius: 0.5rem;
-	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
-	scrollbar-width: none; /* Hide scrollbar Firefox */
+    display: flex;
+    transition: transform 0.5s ease-in-out;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.slider::-webkit-scrollbar {
-	display: none;
+.slide {
+    min-width: 100%;
+    box-sizing: border-box;
+    position: relative; /* Add position relative to contain the overlay */
 }
 
-.slider img {
-	flex: 1 0 100%;
-	scroll-snap-align: start;
-	object-fit: cover;
-    animation: slide 20s 7s infinite ; /* Add animation */
-    animation: name duration timing-function delay iteration-count direction fill-mode;
-
+.slide img {
+    width: 100%;
+    height: 100vh; /* Full height of viewport */
+    object-fit: cover;
 }
 
-@keyframes slide {
-    0% {
-      transform: translateX(0); /* Start at first image */
-    }
-    25%{
-        transform: translateX(0); /* Start at first image */
-    }
-    50%{
-      transform: translateX(-100%); /* Slide to the last image */
-    }
-    75%{
-        transform: translateX(-100%); /* Slide to the last image */
-    }
-    100% {
-      transform: translateX(0%); /* Slide to the last image */
-    }
-  }
+.slide::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)); /* Gradient overlay */
+    z-index: 1; /* Ensure the overlay is above the image */
+}
+
+.slide-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    z-index: 2; /* Ensure text is above the overlay */
+}
+
+.slide-content h1 {
+    margin: 0;
+    font-size: 2rem;
+}
+
+.slide-content .btn {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #000;
+    text-decoration: none;
+    border-radius: 0.25rem;
+    transition: background-color 0.3s;
+}
+
+.slide-content .btn:hover {
+    background-color: rgba(255, 255, 255, 1);
+}
 
 .slider-nav {
-	display: flex;
-	column-gap: 1rem;
-	position: absolute;
-	bottom: 1.25rem;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 1;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    z-index: 2; /* Ensure navigation buttons are above the overlay */
 }
 
-.slider-nav a {
-	width: 0.5rem;
-	height: 0.5rem;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.75;
-	transition: opacity ease 250ms;
-    
+.nav-btn {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.slider-nav a:hover {
-	opacity: 1;
+.nav-btn:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .XuntaDirectiva {
@@ -273,7 +308,7 @@
 }
 
 .botonAsamblea:hover, .botonVotos:hover{
-    background-color: #000000;
+    background-color: rgb(12, 12, 12);
 }
 
 .botonAsamblea img, .botonVotos img {
@@ -424,15 +459,6 @@ footer h3{
     max-width: 100%;
 }
 
-.barra {
-    position: relative;
-    left: 495px;
-    width: 50%;
-    height: 1px;
-    margin-top: 15px;
-    background-color: #ffffff;
-}
-
 .igualdad{
     display: grid;
     grid-template-columns: auto auto;
@@ -493,25 +519,21 @@ footer h3{
 
 
 
-@media (max-width: 952px){
-    .enlace{
-        padding-left: 20px;
-    }
 
-    .navbar .menu li a{
-        font-size: 16px;
-    }
-}
 
-@media (max-width: 858px){
-    .checkbtn{
+@media (max-width: 1200px) {
+    .checkbtn {
         display: block;
         padding-top: 20px;
         z-index: 999;
     }
 
-    
-    .menu{
+    .botones{
+        display: grid;
+        grid-template-columns: auto;
+    }
+
+    .menu {
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -519,34 +541,128 @@ footer h3{
         top: 80px;
         left: -100%;
         text-align: center;
-        transition: all .5s;
-        z-index: 1;        
+        transition: all 0.5s;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow-y: auto;
     }
 
-
-    .navbar .menu li{
+    .navbar .menu li {
         display: block;
         margin: 50px 0;
         line-height: 30px;
-
     }
 
-
-    .navbar .menu li a{
+    .navbar .menu li a {
         font-size: 20px;
     }
 
-
-    li a:hover{
+    li a:hover {
         background: none;
         color: blue;
     }
 
-    #check:checked ~ .menu{
-        left:0;
+    #check:checked ~ .menu {
+        left: 0;
     }
 
     .menu li:hover ul {
         display: none;
+    }
+
+    .menu .submenu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu .submenu li {
+        margin: 10px 0;
+    }
+
+    .menu li.show .submenu {
+        display: flex;
+    }
+
+    .conjuBotones {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .botonAsamblea {
+        margin-bottom: 5px;
+    }
+
+    .botonVotos {
+        margin-left: 0;
+    }
+
+    .NovasDestacadas h2 {
+        margin-bottom: 0;
+        text-align: center;
+    }
+
+    .Noticia1, .Noticia2 {
+        width: 100%;
+        grid-template-columns: 1fr;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .Noticia1 img, .Noticia2 img {
+        margin-right: 0;
+        max-width: 90%; /* Ensure images are not too large */
+    }
+
+    .texto {
+        margin-top: 20px;
+        text-align: center;
+    }
+    
+    .texto h3 {
+        font-size: 15px;
+    }
+
+    .Redes {
+        grid-template-columns: auto;
+    }
+
+    .Facebook {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    
+    .Twitter {
+        margin-left: 0;
+    }
+    
+    .footergroup {
+        grid-template-columns: auto;
+        grid-gap: 30px;
+        padding: 45px;
+    }
+
+    .imagen {
+        padding-left: 0;
+        text-align: center;
+    }
+
+    footer h3 {
+        right: 0;
+        text-align: center;
+    }
+
+    .entidades {
+        grid-template-columns: auto auto;
+        justify-content: center;
+        align-items: center;
+        grid-gap: 50px;
+    }
+
+    .entidades img {
+        height: auto;
+        max-width: 100%;
     }
 }
