--- a/Salvamento/Pantallas/Historia/historia.css
+++ b/Salvamento/Pantallas/Historia/historia.css
@@ -109,42 +109,58 @@ nav .menu li a {
     font-size: 30px;
 }
 
-.texto{
-    display: grid;
-    grid-template-columns: auto auto;
-    margin-top: 60px;
+section.contenido {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.contenido-imagen {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.contenido-imagen img {
     width: 100%;
-    color: #7a7a7a;
-    font-weight: bold;
-}
-
-.texto div{
-    margin-top: 15px;
-    margin-left: 25px;
-}
-
-.columna1{
-    padding-left: 20px;
-}
-
-.correo{
-    padding-top: 18px;
-}
-
-.movil{
-    width: 18px;
     height: auto;
+    border-radius: 10px;
 }
 
-.columna1 img{
-    margin-top: 15px;
-    margin-bottom: 15px;
+.contenido-texto {
+    margin-top: 20px;
+}
+
+.contenido-texto h3 {
+    margin-top: 0;
+    color: blue;
+    font-size: 24px;
+}
+
+.contenido-texto p {
+    line-height: 1.6;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.contenido-texto .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background: blue;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.contenido-texto .btn:hover {
+    background: #c0392b;
 }
 
 
-.columna2{
-    padding-left: 20px;
-}
+
 
 footer{
     margin-top: 50px;
@@ -289,7 +305,6 @@ footer h3{
 
 
 
-
 @media (max-width: 952px){
     .enlace{
         padding-left: 20px;
@@ -358,19 +373,6 @@ footer h3{
     
     .logofooter{
         height: 80px;
-    }
-
-    .columna2{
-        padding-top: 20px;
-    }
-
-    .columna2 iframe{
-        width: 95%;
-        height: 300px;
-    }
-
-    .texto{
-        grid-template-columns: auto;
     }
 
 }
