--- a/Salvamento/index.css
+++ b/Salvamento/index.css
@@ -222,22 +222,25 @@
 
 .slide-content h1 {
     margin: 0;
-    font-size: 2rem;
+    font-size: 54px;
 }
 
 .slide-content .btn {
     display: inline-block;
     margin-top: 1rem;
     padding: 0.5rem 1rem;
-    background-color: rgba(255, 255, 255, 0.8);
-    color: #000;
+    font-weight: bold;
+    background-color: blue;
+    color: white;
     text-decoration: none;
-    border-radius: 0.25rem;
+    border-radius: 50px;
     transition: background-color 0.3s;
+    font-size: 16px;
 }
 
 .slide-content .btn:hover {
     background-color: rgba(255, 255, 255, 1);
+    color: blue;
 }
 
 .slider-nav {
