--- a/Salvamento/CSS/Ornanigrama.css
+++ b/Salvamento/CSS/Ornanigrama.css
@@ -28,10 +28,10 @@ body {
     font-weight: bold;
     font-size: 30px;
 }
-
-.texto{
+.texto {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
+    gap: 20px;
     margin-top: 60px;
     width: 100%;
     color: #7a7a7a;
@@ -39,26 +39,98 @@ body {
     margin-bottom: 50px;
 }
 
-.texto .definicion{
+.texto .definicion {
     color: black;
 }
 
-.texto div{
-    margin-top: 15px;
-    margin-left: 15px;
-}
-
-.columna{
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
+.columna {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    text-align: center;
+    border: 1px solid #F5F5F5;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.detalles{
-    border-style: solid;
-    border-width: 0px 0px 0px 1px;
-    border-color: #F5F5F5;
-    padding: 0% 0% 0% 5%;
+.columna:hover {
+    transform: scale(1.0);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
+
+.foto {
+    margin-bottom: 15px;
+}
+
+.fotoPerfil {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.detalles {
+    text-align: left;
+    width: 100%;
+    font-size: 14px;
+    line-height: 1.6;
+    color: #4a4a4a;
+}
+
+.detalles ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.detalles ul li {
+    margin-bottom: 10px;
+    position: relative;
+    padding-left: 25px;
+}
+
+.detalles ul li::before {
+    content: "\f111";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900; 
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: #7a7a7a;
+}
+
+.detalles ul ul {
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+.detalles ul ul li {
+    margin-bottom: 5px;
+    padding-left: 25px;
+    border-left: 2px solid #7a7a7a;
+    font-style: italic;
+}
+
+.detalles ul ul li::before {
+    position: absolute;
+    left: 10px;
+    top: 0;
+    color: #7a7a7a;
+}
+
+@media (min-width: 768px) {
+    .texto {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 1024px) {
+    .texto {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+
+
 
