--- a/Salvamento/CSS/header.css
+++ b/Salvamento/CSS/header.css
@@ -1,4 +1,3 @@
-
 .navbar {
     height: 90px;
     width: 100%;
@@ -24,6 +23,9 @@
 .menu {
     display: flex;
     align-items: center;
+    margin: 0 auto;
+    flex: 1;
+    justify-content: center;
 }
 
 .menu li {
@@ -70,6 +72,7 @@
     display: block;
     color: white;
 }
+
 .menu ul ul {
     display: none;
 }
@@ -87,6 +90,17 @@
 
 #check {
     display: none;
+}
+
+.social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; /* Align to the right */
+}
+
+.social-icons a {
+    color: #fff;
+    margin-left: 10px;
 }
 
 @media (max-width: 1200px) {
@@ -110,6 +124,7 @@
         flex-direction: column;
         align-items: center;
         overflow-y: auto;
+        margin: 0;
     }
 
     .navbar .menu li {
@@ -131,10 +146,6 @@
         left: 0;
     }
 
-    .menu li:hover ul {
-        display: none;
-    }
-
     .menu .submenu {
         display: none;
         flex-direction: column;
@@ -148,5 +159,13 @@
     .menu li.show .submenu {
         display: flex;
     }
-}
 
+    .social-icons {
+        margin-top: auto;
+        padding-bottom: 20px;
+    }
+
+    .social-icons a {
+        margin: 0 10px;
+    }
+}
