--- a/Salvamento/CSS/header.css
+++ b/Salvamento/CSS/header.css
@@ -103,6 +103,18 @@
     margin-left: 10px;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+  }
+  
+
 @media (max-width: 1200px) {
     .checkbtn {
         display: block;
